gcc/testsuite/treelang/compile/novar.tree
static void bar ();

bar {
 x =  3;  // { dg-error "x" "not defined" }
}
